[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Common/select.wav" type="AudioStream" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 30.0
margin_top = 40.0
margin_right = 87.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCORE: 0"

[node name="Controls" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Z and X to control power. W and S to move up and down. A and D to move left to right. Space to shoot. Knock off the ball to win"

[node name="RestartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.5
margin_top = -100.0
margin_right = 511.5
margin_bottom = 100.0
text = "RESTART"

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="LoadTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="timeout" from="LoadTimer" to="." method="_on_LoadTimer_timeout"]
